--- a/src/styles/base/_globales.scss
+++ b/src/styles/base/_globales.scss
@@ -12,7 +12,7 @@ body {
   flex-direction: column;
   line-height: 1.8;
   letter-spacing: 0.2rem;
-  font-family: v.$fuente_principal;
+  // font-family: v.$fuente_principal;
 }
 
 *,
