--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,17 @@
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/sections/header.astro";
 import Servicios from "../components/sections/servicios.astro";
+import Contacto from "../components/sections/contacto.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-  <Header />
-  <Servicios />
+  <main>
+    <Header />
+
+    <Servicios />
+  </main>
+  <Contacto />
 </Layout>
