--- a/src/styles/base/_tipografia.scss
+++ b/src/styles/base/_tipografia.scss
@@ -2,7 +2,7 @@
 
 h1,
 h2 {
-  margin: 0 0 2.5rem 0;
+  margin: 2.5rem 0;
   text-align: center;
 }
 h3 {
@@ -30,7 +30,7 @@ h1 {
 }
 
 h2 {
-  font-size: clamp(2.5rem, 3vw, 3.5rem);
+  font-size: clamp(2.5rem, 3.2vw, 4rem);
 }
 
 h3 {
