Se agrego una forma al footer

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -23,6 +23,7 @@ $blanco: #ffffff;
 $fondo_gris: #e4e4e4;
 $tipografia_gris: #757575;
 $color_primario: #ff0000;
+$color_primario: #b90000;
 
 $whatsapp: #25d366;
 
