--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Header from "../components/sections/header.astro";
+import Header from "../components/layout/header.astro";
 import Servicios from "../components/sections/servicios.astro";
 import Contacto from "../components/sections/contacto.astro";
+import Footer from "../components/layout/footer.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -15,4 +16,6 @@ import Contacto from "../components/sections/contacto.astro";
     <Servicios />
   </main>
   <Contacto />
+
+  <Footer />
 </Layout>
