Se finalizo el footer

--- a/src/components/layout/footer.astro
+++ b/src/components/layout/footer.astro
@@ -1,19 +1,19 @@
 <footer class="footer">
-  <div class="footer__fondo footer__fondo--uno">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path
-        fill="#ff0000"
-        d="M0,96L288,128L576,192L864,64L1152,0L1440,64L1440,320L1152,320L864,320L576,320L288,320L0,320Z"
-      />
-    </svg>
-  </div>
-
-  <div class="footer__fondo footer__fondo--dos">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path
-        fill="#b90000"
-        d="M0,96L360,0L720,192L1080,256L1440,64L1440,320L1080,320L720,320L360,320L0,320Z"
-      />
-    </svg>
+  <div class="contenedor">
+    <div class="footer__contenido">
+      <div class="footer__contenido--img">
+        <img
+          src="/public/images/maqpro.png"
+          alt="Logo MAQPRO"
+          loading="lazy"
+          width="800"
+          height="900"
+        />
+      </div>
+      <div class="footer__contenido--privacidad">
+        <p>© 2025 MAQPRO. Todos los derechos reservados.</p>
+        <a href="/privacidad">Aviso de privacidad</a>
+      </div>
+    </div>
   </div>
 </footer>
