Se agrego la sección consultoria y asesoría

--- a/src/components/layout/footer.astro
+++ b/src/components/layout/footer.astro
@@ -2,13 +2,15 @@
   <div class="contenedor">
     <div class="footer__contenido">
       <div class="footer__contenido--img">
-        <img
-          src="/public/images/maqpro.png"
-          alt="Logo MAQPRO"
-          loading="lazy"
-          width="800"
-          height="900"
-        />
+        <a href="#inicio">
+          <img
+            src="/public/images/maqpro.png"
+            alt="Logo MAQPRO"
+            loading="lazy"
+            width="800"
+            height="900"
+          />
+        </a>
       </div>
       <div class="footer__contenido--privacidad">
         <p>© 2025 MAQPRO. Todos los derechos reservados.</p>
