--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from "../components/layout/header.astro";
 import Servicios from "../components/sections/servicios.astro";
 import Contacto from "../components/sections/contacto.astro";
 import Footer from "../components/layout/footer.astro";
+import Consultoria from "../components/sections/consultoria.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -15,6 +16,9 @@ import Footer from "../components/layout/footer.astro";
 
     <Servicios />
   </main>
+  
+  <Consultoria />
+
   <Contacto />
 
   <Footer />
