Se agrego el favicon y google analitycs

--- a/src/components/sections/servicios.astro
+++ b/src/components/sections/servicios.astro
@@ -10,52 +10,57 @@ import Card from "../ui/cards.astro";
       <Card
         titulo="Renta de maquinaria pesada"
         info="Para construcción, rehabilitación, conservación y mantenimiento de vias terrestres, transporte y anclaje de maquinaria pesada."
-        img="/public/icons/seguridad.png"
+        img="/public/icons/retroexcavadora.png"
       />
       <Card
         titulo="Prestación de servicios técnicos"
         info="Consultoría y accesoria, en el aspecto de la prestación de servicios propios de la empresa."
+        img="/public/icons/soporte-tecnico.png"
+      />
+      <Card
+        titulo="Comercialización y Arrendamiento de Maquinaria y Equipos Especializados"
+        info="Compra, venta, importación, exportación, distribución y arrendamiento de maquinaria marítima y terrestre."
         img="/public/icons/seguridad.png"
       />
       <Card
-        titulo="Prestación de servicios técnicos"
-        info="compra venta, importación, exportación, comisión, mediación, distribución y arrendamiento, de toda clase de maquinaria, marítima o terrestre, ya sea para uso industrial, comercial, de exploración o turístico, toda clase de equipo, refacciones, herramientas y demás partes y accesorios, tanques de almacenamientos de hidrocarburos y gas, equipo de arrastre, planas, porta contenedores dollys, etc."
-        img="/public/icons/seguridad.png"
+        titulo="Maquinaria y Equipos Especializados"
+        info="Equipos, refacciones, herramientas y accesorios para uso industrial, comercial, de exploración o turístico, incluyendo tanques para hidrocarburos y gas, y equipo de transporte y arrastre."
+        img="/public/icons/la-comercializacion-del-afiliado.png"
       />
       <Card
-        titulo="Prestación de servicios técnicos"
-        info="Inspección de maquinaria en el funcionamiento optimo mediante un mantenimiento periódico y riguroso asi como brindar asistencia técnica en caso de averías o problemas operativos."
-        img="/public/icons/seguridad.png"
+        titulo="Inspección de maquinaria"
+        info="En el funcionamiento optimo mediante un mantenimiento periódico y riguroso asi como brindar asistencia técnica en caso de averías o problemas operativos."
+        img="/public/icons/inspeccion.png"
       />
       <Card
-        titulo="Prestación de servicios técnicos"
-        info="La contratación de personal técnico y personal especializado para llevar a cabo los fines sociales."
-        img="/public/icons/seguridad.png"
+        titulo="La contratación de personal"
+        info=" Técnico y personal especializado para llevar a cabo los fines sociales."
+        img="/public/icons/nueva-contratacion.png"
       />
       <Card
-        titulo="Prestación de servicios técnicos"
-        info="La celebración de toda clase de contratos de prestación de servicios profesionales relacionados a la empresa."
-        img="/public/icons/seguridad.png"
+        titulo="Celebración de toda clase de contratos"
+        info="De prestación de servicios profesionales relacionados a la empresa."
+        img="/public/icons/contrato.png"
       />
       <Card
-        titulo="Prestación de servicios técnicos"
-        info="Adquisición, compra, comisión mercantil arrendamiento y uso por cualquier titulo legal, de toda clase de bienes muebles, maquinaria, materias primas y de los inmuebles que sean necesarios o convenientes para el desarrollo de la empresa."
-        img="/public/icons/seguridad.png"
+        titulo="Adquisición, compra, comisión mercantil arrendamiento"
+        info="Uso por cualquier titulo legal, de toda clase de bienes muebles, maquinaria, materias primas y de los inmuebles que sean necesarios o convenientes para el desarrollo de la empresa."
+        img="/public/icons/metodo-de-pago.png"
       />
       <Card
-        titulo="Prestación de servicios técnicos"
-        info="Adquirir, poseer, arrendar, ceder y tramitar toda clase de concesiones, licencias, autorizaciones, franquicias, servidumbres, asi como derechos e intereses de toda clase y naturaleza."
-        img="/public/icons/seguridad.png"
+        titulo="Adquirir, poseer, arrendar, ceder y tramitar"
+        info="Toda clase de concesiones, licencias, autorizaciones, franquicias, servidumbres, asi como derechos e intereses de toda clase y naturaleza."
+        img="/public/icons/transferir.png"
       />
       <Card
-        titulo="Prestación de servicios técnicos"
-        info="Presentación en calidad de agente, comisionista, factor, contratista, representante legal o mandatario de toda clase de empresas o persona, nacionales o extranjeras."
-        img="/public/icons/seguridad.png"
+        titulo="Presentación en calidad"
+        info="De agente, comisionista, factor, contratista, representante legal o mandatario de toda clase de empresas o persona, nacionales o extranjeras."
+        img="/public/icons/legal.png"
       />
       <Card
-        titulo="Prestación de servicios técnicos"
-        info="La sección y contratación de personas físicas o morales, que en forma interna o externa, directa o indirecta, prestan a la sociedad los servicios que sean necesarios en la consecución de los fines sociales."
-        img="/public/icons/seguridad.png"
+        titulo="La sección y contratación de personas físicas o morales,"
+        info="Que en forma interna o externa, directa o indirecta, prestan a la sociedad los servicios que sean necesarios en la consecución de los fines sociales."
+        img="/public/icons/contrato.png"
       />
     </div>
   </div>
