--- a/src/components/ui/cards.astro
+++ b/src/components/ui/cards.astro
@@ -5,11 +5,15 @@ const { img } = Astro.props;
 ---
 
 <div class="card">
-  <div class="card__contenido">
-      <div class="contenedor">
-      <div class="card__contenido--img"><img src={img} alt="{img}" loading="lazy" width="900" height="800"></div>
-      <div class="card__contenido--titulo">{titulo}</div>
-      <div class="card__contenido--info">{info}</div>
+  <div class="cardContenido">
+    <div class="contenedor">
+      <div class="cardContenido__items">
+        <div class="cardContenido__items--img">
+          <img src={img} alt="{img}" loading="lazy" width="900" height="800" />
+        </div>
+        <div class="cardContenido__items--titulo"><h4>{titulo}</h4></div>
+        <div class="cardContenido__items--info">{info}</div>
+      </div>
     </div>
   </div>
   <div class="blob"></div>
