--- a/src/styles/base/_tipografia.scss
+++ b/src/styles/base/_tipografia.scss
@@ -11,7 +11,8 @@ h3 {
 }
 
 h4 {
-  margin: 2rem 0;
+  margin: 1rem 0;
+  line-height: 1.3;
   text-align: center;
 }
 
@@ -38,7 +39,7 @@ h3 {
 }
 
 h4 {
-  font-size: clamp(2rem, 2.2vw, 2.6rem);
+  font-size: clamp(1.6rem, 1.7vw, 1.8rem);
 }
 
 p {
