--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -4,29 +4,41 @@
   position: relative;
   width: 100%;
   margin: 0 auto;
-  height: 60rem;
+  height: 40rem;
   border-radius: 14px;
   z-index: 1111;
   overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  box-shadow:1rem 2rem 2rem #bebebe, -1em -2rem 2rem v.$blanco;
+  box-shadow: 1rem 2rem 2rem #bebebe, -1em -2rem 2rem v.$blanco;
 }
 
-.card__contenido {
+.cardContenido {
   position: absolute;
   top: 5px;
   left: 5px;
-  width: 98%;
-  height: 85%;
+  width: 96%;
+  height: 97%;
   z-index: 2;
   background: v.$blanco;
   backdrop-filter: blur(24px);
   border-radius: 10px;
   overflow: hidden;
   outline: 2px solid v.$blanco;
+
+  &__items {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+
+    &--img {
+      width: 10rem;
+      margin: 2.5rem auto;
+    &:hover{
+      background-color: #ff5a5a;
+      border-radius: 50%;
+    }
+    }
+  }
 }
 
 .blob {
@@ -34,7 +46,7 @@
   z-index: 1;
   top: 50%;
   left: 50%;
-  width: 99%;
+  width: 100%;
   height: 80%;
   border-radius: 50%;
   background-color: v.$color_primario;
