Se agregaron los avisos de privacidad

--- a/src/components/layout/footer.astro
+++ b/src/components/layout/footer.astro
@@ -14,7 +14,7 @@
       </div>
       <div class="footer__contenido--privacidad">
         <p>© 2025 MAQPRO. Todos los derechos reservados.</p>
-        <a href="/privacidad">Aviso de privacidad</a>
+        <a href="/public/Avisos/Avisos de privacidad.pdf">Aviso de privacidad</a>
       </div>
     </div>
   </div>
