--- a/src/components/layout/header.astro
+++ b/src/components/layout/header.astro
@@ -8,14 +8,14 @@ import BarraNav from "../ui/nav.astro";
     <div class="contenedor">
       <div class="header__contenido">
         <div class="header__contenido--info">
-          <h1>Bienvenido a MAQPRO</h1>
+          <h1>Bienvenido a <span>MAQPRO</span></h1>
 
           <p>
             Ofrecemos soluciones completas para proyectos de construcción,
             mantenimiento, y rehabilitación, con servicios especializados en la
             renta de maquinaria pesada, asesoría técnica compra venta de equipos
             y mas, trabajamos para garantizar el éxito de tu proyecto sea en el
-            sector industrial comercial turístico, o de infraestructura
+            sector industrial comercial turístico, o de infraestructura.
           </p>
         </div>
         <div class="header__contenido--img">
