--- a/src/components/ui/separadorServicios.astro
+++ b/src/components/ui/separadorServicios.astro
@@ -2,7 +2,7 @@
   <div class="separadorServicios__barra"></div>
 
   <div class="contenedor">
-      <h2>¿Porque elegirnos?</h2>
+      <h2>¿Por qué elegirnos?</h2>
     <div class="separadorServicios__cards">
       <div class="separadorServicios__cards--card">
         <div class="icono">
@@ -51,7 +51,7 @@
         <div class="info">
           <p>
             Nuestra maquinaria y equipos cumplen con los más altos estándares de
-            calidad
+            calidad.
           </p>
         </div>
       </div>
