--- a/src/components/ui/cards.astro
+++ b/src/components/ui/cards.astro
@@ -9,10 +9,10 @@ const { img } = Astro.props;
     <div class="contenedor">
       <div class="cardContenido__items">
         <div class="cardContenido__items--img">
-          <img src={img} alt="{img}" loading="lazy" width="900" height="800" />
+          <img src={img} alt="Icono servicio" loading="lazy" width="900" height="800" />
         </div>
         <div class="cardContenido__items--titulo"><h4>{titulo}</h4></div>
-        <div class="cardContenido__items--info">{info}</div>
+        <div class="cardContenido__items--info"><p>{info}</p></div>
       </div>
     </div>
   </div>
