--- a/src/components/sections/consultoria.astro
+++ b/src/components/sections/consultoria.astro
@@ -1,4 +1,4 @@
-<section class="consultoria">
+<section class="consultoria section">
   <div class="contenedor">
     <div class="consultoria__contenido">
       <div class="consultoria__contenido--info">
