--- a/src/components/sections/contacto.astro
+++ b/src/components/sections/contacto.astro
@@ -1,6 +1,6 @@
-<section class="contacto" id="contacto">
+<section class="section contacto" id="contacto">
   <div class="contenedor">
-    <h2>Empieza a mejorar tus opciones</h2>
+    <h2 >Empieza a mejorar tus opciones</h2>
     <h3>Contáctenos para una cotización personalizada.</h3>
 
     <div class="contacto__contenido">
@@ -35,7 +35,6 @@
           </div>
         </div>
         <div class="card__telefono">
-
           <div class="card__icono">
             <img
               src="/public/icons/llamada.png"
@@ -46,7 +45,7 @@
             />
           </div>
           <div class="contenedor">
-            <h3>Teléfono </h3>
+            <h3>Teléfono</h3>
             <p>2293716558</p>
           </div>
         </div>
