--- a/src/components/sections/servicios.astro
+++ b/src/components/sections/servicios.astro
@@ -3,7 +3,7 @@ import SeperadorServicios from "../ui/separadorServicios.astro";
 import Card from "../ui/cards.astro";
 ---
 
-<section class="servicios" id="servicios">
+<section class="servicios section" id="servicios">
   <div class="contenedor">
     <h2>Nuestros Servicios</h2>
     <div class="servicios__cards">
