--- a/src/components/ui/cards.astro
+++ b/src/components/ui/cards.astro
@@ -8,7 +8,7 @@ const { img } = Astro.props;
   <div class="cardContenido">
     <div class="contenedor">
       <div class="cardContenido__items">
-        <div class="cardContenido__items--img">
+        <div class="cardContenido__items--img img-reveal">
           <img src={img} alt="Icono servicio" loading="lazy" width="900" height="800" />
         </div>
         <div class="cardContenido__items--titulo"><h4>{titulo}</h4></div>
