--- a/src/components/ui/nav.astro
+++ b/src/components/ui/nav.astro
@@ -17,6 +17,7 @@
         <ul>
           <li><a href="#inicio" class="nav-link active">Inicio</a></li>
           <li><a href="#servicios" class="nav-link">Servicios</a></li>
+          <li><a href="#nosotros" class="nav-link">Nosotros</a></li>
           <li><a href="#contacto" class="nav-link">Contacto</a></li>
         </ul>
 
@@ -37,7 +38,6 @@
           <path d="M4 12l16 0"></path>
           <path d="M4 18l16 0"></path>
         </svg>
-       
       </nav>
     </div>
   </div>
