--- a/src/components/ui/separadorServicios.astro
+++ b/src/components/ui/separadorServicios.astro
@@ -1,8 +1,8 @@
-<div class="separadorServicios">
+<div class="separadorServicios section">
   <div class="separadorServicios__barra"></div>
 
   <div class="contenedor">
-      <h2>¿Por qué elegirnos?</h2>
+    <h2>¿Por qué elegirnos?</h2>
     <div class="separadorServicios__cards">
       <div class="separadorServicios__cards--card">
         <div class="icono">
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="separadorServicios__cards--card">
-        <div class="icono">
+        <div class="icono ">
           <img
             src="/public/icons/seguridad.png"
             alt="Icono Experiencia"
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="separadorServicios__cards--card">
-        <div class="icono">
+        <div class="icono ">
           <img
             src="/public/icons/excavadora.png"
             alt="Icono Experiencia"
