--- a/src/components/layout/footer.astro
+++ b/src/components/layout/footer.astro
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="section footer ">
   <div class="contenedor">
     <div class="footer__contenido">
       <div class="footer__contenido--img">
