--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,7 @@ import Servicios from "../components/sections/servicios.astro";
 import Contacto from "../components/sections/contacto.astro";
 import Footer from "../components/layout/footer.astro";
 import Consultoria from "../components/sections/consultoria.astro";
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Nosotros from "../components/sections/nosotros.astro";
 ---
 
 <Layout>
@@ -16,10 +14,30 @@ import Consultoria from "../components/sections/consultoria.astro";
 
     <Servicios />
   </main>
-  
+
   <Consultoria />
 
+  <Nosotros />
   <Contacto />
 
   <Footer />
 </Layout>
+
+<script is:client="load">
+  const sections = document.querySelectorAll(".section");
+
+  const observer = new IntersectionObserver(
+    (entries) => {
+      entries.forEach((entry) => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("visible");
+        }
+      });
+    },
+    {
+      threshold: 0.2,
+    }
+  );
+
+  sections.forEach((section) => observer.observe(section));
+</script>
