Se agrego la seccion de nosotros -se agregaron animaciones -se agrego un boton en el header

--- a/src/components/layout/header.astro
+++ b/src/components/layout/header.astro
@@ -17,15 +17,17 @@ import BarraNav from "../ui/nav.astro";
             y mas, trabajamos para garantizar el éxito de tu proyecto sea en el
             sector industrial comercial turístico, o de infraestructura.
           </p>
+          <div class="btn_rojo">
+            <a href="#contacto" class="btn">Contactar</a>
+          </div>
         </div>
-        <div class="header__contenido--img  image-wrapper ">
+        <div class="header__contenido--img image-wrapper">
           <img
             src="/public/images/header.png"
             alt="Imagen Servicios maqpro"
             loading="lazy"
             width="900"
             height="800"
-            
           />
         </div>
       </div>
