--- a/src/components/sections/nosotros.astro
+++ b/src/components/sections/nosotros.astro
@@ -1,9 +1,9 @@
 <section class="background section" id="nosotros">
-  <div class="contenedor">
+  <div class="nosotros__contenedor">
+    <h2>Sobre Nosotros</h2>
     <div class="nosotros">
-      <h2>Sobre Nosotros</h2>
       <div class="nosotros__mision">
-        <div class="nosotros__mision--img image-wrapper ">
+        <div class="nosotros__mision--img image-wrapper">
           <img
             src="/public/images/nosotros_1.jpg"
             alt="Imagen Accesoria"
@@ -43,7 +43,7 @@
             internacionales en el desarrollo de proyectos de alto impacto.
           </p>
         </div>
-        <div class="nosotros__vision--img image-wrapper ">
+        <div class="nosotros__vision--img image-wrapper">
           <img
             src="/public/images/nosotros_2.jpg"
             alt="Imagen Accesoria"
@@ -52,6 +52,45 @@
             width="900"
             height="800"
           />
+        </div>
+      </div>
+      <div class="nosotros__valores">
+        <div class="nosotros__valores--info">
+          <h3>Valores Corporativos</h3>
+          <div class="nosotros__valores--item">
+            <h4>1. Legalidad</h4>
+            <p>
+              Actuamos bajo un estricto cumplimiento de las leyes, normas y
+              regulaciones aplicables, garantizando transparencia, ética y
+              certeza jurídica en cada operación, contrato y servicio que
+              ofrecemos.
+            </p>
+          </div>
+          <div class="nosotros__valores--item">
+            <h4>2. Seguridad</h4>
+            <p>
+              Priorizamos la seguridad en todos nuestros procesos, equipos y
+              servicios, protegiendo la integridad de nuestro personal, clientes
+              y activos, mediante prácticas responsables, mantenimiento riguroso
+              y estándares operativos confiables.
+            </p>
+          </div>
+          <div class="nosotros__valores--item">
+            <h4>3. Eficiencia</h4>
+            <p>
+              Optimizamos recursos, tiempos y procesos para ofrecer soluciones
+              oportunas y efectivas, enfocadas en maximizar el rendimiento
+              operativo y el éxito de cada proyecto.
+            </p>
+          </div>
+          <div class="nosotros__valores--item">
+            <h4>4. Confianza</h4>
+            <p>
+              Construimos relaciones sólidas y duraderas basadas en el
+              compromiso, la responsabilidad y el cumplimiento de acuerdos,
+              posicionándonos como un aliado estratégico para nuestros clientes.
+            </p>
+          </div>
         </div>
       </div>
     </div>
