Se subio ajustaron detalles de accesibilidad y rendimiento

--- a/src/components/layout/footer.astro
+++ b/src/components/layout/footer.astro
@@ -4,7 +4,7 @@
       <div class="footer__contenido--img">
         <a href="#inicio">
           <img
-            src="/public/images/maqpro.png"
+            src="/images/maqpro.png"
             alt="Logo MAQPRO"
             loading="lazy"
             width="800"
@@ -14,7 +14,7 @@
       </div>
       <div class="footer__contenido--privacidad">
         <p>© 2025 MAQPRO. Todos los derechos reservados.</p>
-        <a href="/public/Avisos/Avisos de privacidad.pdf">Aviso de privacidad</a>
+        <a href="/Avisos/Avisos de privacidad.pdf">Aviso de privacidad</a>
       </div>
     </div>
   </div>
