--- a/src/components/layout/header.astro
+++ b/src/components/layout/header.astro
@@ -23,7 +23,7 @@ import BarraNav from "../ui/nav.astro";
         </div>
         <div class="header__contenido--img image-wrapper">
           <img
-            src="/public/images/header.png"
+            src="/images/header.png"
             alt="Imagen Servicios maqpro"
             loading="lazy"
             width="900"
