--- a/src/components/sections/consultoria.astro
+++ b/src/components/sections/consultoria.astro
@@ -16,7 +16,7 @@
       <div class="consultoria__contenido--images">
         <div class="consultoria__image--1">
           <img
-            src="/public/images/consultoria_1.jpg"
+            src="/images/consultoria_1.jpg"
             alt="Consultoría 1"
             loading="lazy"
             width="900"
@@ -25,7 +25,7 @@
         </div>
         <div class="consultoria__image--2">
           <img
-            src="/public/images/consultoria_2.jpg"
+            src="/images/consultoria_2.jpg"
             alt="Consultoría 1"
             loading="lazy"
             width="900"
