--- a/src/components/sections/contacto.astro
+++ b/src/components/sections/contacto.astro
@@ -19,7 +19,7 @@
         <div class="card__ubicacion">
           <div class="card__icono">
             <img
-              src="/public/icons/ubicacion.png"
+              src="/icons/ubicacion.png"
               alt="Icono Ubicación"
               loading="lazy"
               width="900"
@@ -37,7 +37,7 @@
         <div class="card__telefono">
           <div class="card__icono">
             <img
-              src="/public/icons/llamada.png"
+              src="/icons/llamada.png"
               alt="Icono llamada"
               loading="lazy"
               width="900"
