--- a/src/components/sections/nosotros.astro
+++ b/src/components/sections/nosotros.astro
@@ -5,7 +5,7 @@
       <div class="nosotros__mision">
         <div class="nosotros__mision--img image-wrapper">
           <img
-            src="/public/images/nosotros_1.jpg"
+            src="/images/nosotros_1.jpg"
             alt="Imagen Accesoria"
             class="img-reveal"
             loading="lazy"
@@ -45,7 +45,7 @@
         </div>
         <div class="nosotros__vision--img image-wrapper">
           <img
-            src="/public/images/nosotros_2.jpg"
+            src="/images/nosotros_2.jpg"
             alt="Imagen Accesoria"
             class="img-reveal"
             loading="lazy"
