--- a/src/components/ui/nav.astro
+++ b/src/components/ui/nav.astro
@@ -4,7 +4,7 @@
       <div class="barraNav__items--img">
         <a href="/">
           <img
-            src="/public/images/maqpro.png"
+            src="/images/maqpro.png"
             alt="Logo MAQPRO"
             loading="lazy"
             width="800"
