--- a/src/components/ui/separadorServicios.astro
+++ b/src/components/ui/separadorServicios.astro
@@ -7,7 +7,7 @@
       <div class="separadorServicios__cards--card">
         <div class="icono">
           <img
-            src="/public/icons/experiencia.png"
+            src="/icons/experiencia.png"
             alt="Icono Experiencia"
             loading="lazy"
             width="900"
@@ -24,7 +24,7 @@
       <div class="separadorServicios__cards--card">
         <div class="icono ">
           <img
-            src="/public/icons/seguridad.png"
+            src="/icons/seguridad.png"
             alt="Icono Experiencia"
             loading="lazy"
             width="900"
@@ -41,7 +41,7 @@
       <div class="separadorServicios__cards--card">
         <div class="icono ">
           <img
-            src="/public/icons/excavadora.png"
+            src="/icons/excavadora.png"
             alt="Icono Experiencia"
             loading="lazy"
             width="900"
