--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,4 +1,4 @@
-@import url("https://use.typekit.net/bnv5cmf.css");
+// @import url("https://use.typekit.net/bnv5cmf.css");
 
 //Fuentes
 $delgada: 300;
