--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -49,7 +49,7 @@
 .navmenu a,
 .navmenu a:focus {
   color: v.$negro;
-  padding: 10px 20px;
+  padding: 1rem 2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
