--- a/src/styles/layout/_servicios.scss
+++ b/src/styles/layout/_servicios.scss
@@ -3,7 +3,8 @@
 
 .servicios {
   &__cards {
-    margin-bottom: 5rem;
+    margin: 0 auto 5rem auto ;
+    padding: 2rem 3rem;
     @include mx.grid(1, 2rem);
 
     @include mx.telefono-mediano {
