chore(release): prepare astro v1.0.0

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -114,10 +114,10 @@ import "../styles/app.scss";
       content="Soluciones completas para proyectos de construcción, mantenimiento y rehabilitación. Renta de maquinaria pesada y asesoría técnica especializada."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.maqpro.com" />
+    <meta property="og:url" content="http://maqpro-heavymanufacturing.com.mx" />
     <meta
       property="og:image"
-      content="https://www.maqpro.com/img/og-image.jpg"
+      content="http://maqpro-heavymanufacturing.com.mx/images/maqpro.png"
     />
 
     <meta name="twitter:card" content="summary_large_image" />
@@ -131,10 +131,10 @@ import "../styles/app.scss";
     />
     <meta
       name="twitter:image"
-      content="https://www.maqpro.com/img/og-image.jpg"
+      content="http://maqpro-heavymanufacturing.com.mx/images/maqpro.png"
     />
 
-    <link rel="canonical" href="https://www.maqpro.com" />
+    <link rel="canonical" href="http://maqpro-heavymanufacturing.com.mx" />
 
     <meta name="generator" content={Astro.generator} />
     <title>MAQPRO</title>
