Se agrego un correo

--- a/src/components/sections/contacto.astro
+++ b/src/components/sections/contacto.astro
@@ -1,6 +1,6 @@
 <section class="section contacto" id="contacto">
   <div class="contenedor">
-    <h2 >Empieza a mejorar tus opciones</h2>
+    <h2>Empieza a mejorar tus opciones</h2>
     <h3>Contáctenos para una cotización personalizada.</h3>
 
     <div class="contacto__contenido">
@@ -34,19 +34,36 @@
             </p>
           </div>
         </div>
-        <div class="card__telefono">
-          <div class="card__icono">
-            <img
-              src="/icons/llamada.png"
-              alt="Icono llamada"
-              loading="lazy"
-              width="900"
-              height="800"
-            />
+        <div class="card__contacto">
+          <div class="card__contacto--tel">
+            <div class="card__icono">
+              <img
+                src="/icons/llamada.png"
+                alt="Icono llamada"
+                loading="lazy"
+                width="900"
+                height="800"
+              />
+            </div>
+            <div class="">
+              <h3>Teléfono</h3>
+              <p>2293716558</p>
+            </div>
           </div>
-          <div class="contenedor">
-            <h3>Teléfono</h3>
-            <p>2293716558</p>
+          <div class="card__contacto--email">
+            <div class="card__icono">
+              <img
+                src="/icons/correo.png"
+                alt="Icono correo"
+                loading="lazy"
+                width="900"
+                height="800"
+              />
+            </div>
+            <div class="">
+              <h3>E-mail</h3>
+              <p>macpro298@gmail.com</p>
+            </div>
           </div>
         </div>
       </div>
