--- a/src/styles/layout/_contacto.scss
+++ b/src/styles/layout/_contacto.scss
@@ -32,7 +32,7 @@
         gap: 2rem;
       }
       .card__ubicacion,
-      .card__telefono {
+      .card__contacto {
         border-radius: 1rem;
         box-shadow: 1px 2px 30px 3px rgba(138, 138, 138, 0.507);
         -webkit-box-shadow: 1px 2px 30px 3px rgba(138, 138, 138, 0.507);
@@ -40,6 +40,11 @@
         max-width: 90%;
         width: 100%;
         margin: 0 auto;
+      }
+      .card__contacto {
+        display: flex;
+        gap: 1rem;
+        justify-content: space-evenly;
       }
       p {
         margin: 0rem 0 4rem 0;
@@ -55,9 +60,6 @@
         max-width: 90%;
         width: 100%;
         margin: 0 auto;
-      }
-      .card__telefono {
-        flex: 5;
       }
 
       .card__icono {
